--- a/notes.org
+++ b/notes.org
@@ -937,6 +937,25 @@ CLOSED: [2017-07-27 Thu 23:46]
     (org-agenda nil "u"))
 #+END_SRC
 
+** DONE Make function to describe groupers
+CLOSED: [2017-07-28 Fri 00:02]
+:LOGBOOK:
+-  State "DONE"       from "TODO"       [2017-07-28 Fri 00:02]
+:END:
+
+#+BEGIN_SRC elisp
+  (defun osa/describe-groupers ()
+    (require 'dash-functional)
+    (let ((groups (cl-loop for (group-type fn) on org-super-agenda-group-types by 'cddr
+                           for docstring = (s-collapse-whitespace
+                                            (s-replace "\n" " " (documentation fn)))
+                           when docstring
+                           collect (list group-type docstring) into groups
+                           finally return (-sort (-on 'string< 'car) groups))))
+      (apply 'concat (--map (format "+ =%s=: %s\n" (first it) (second it))
+                            groups))))
+#+END_SRC
+
 ** MAYBE Use cl-seq
 
 I just discovered the =cl-seq= library, which includes =cl-subsetp=, which might be preferable over =seq-intersection= for testing membership.
