--- a/README.org
+++ b/README.org
@@ -32,38 +32,39 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
             org-super-agenda ""
             ((org-agenda-span 'day)
              (org-super-agenda-groups
-                '(;; Each group has an implicit boolean OR operator between its selectors.
-                  (:name "Today"  ; Optionally specify section name
-                         :time t  ; Items that have a time associated
-                         :todo "TODAY")  ; Items that have this TODO keyword
-                  (:name "Important"
-                         ;; Single arguments given alone
-                         :tag "bills"
-                         :priority "A")
-                  (:name "Shopping in town"
-                         ;; Boolean AND group matches items that match all subgroups
-                         :and (:tag "shopping" :tag "@town"))
-                  (:name "Food-related"
-                         ;; Multiple args given in list with implicit OR
-                         :tag ("food" "dinner"))
-                  (:name "Personal"
-                         :habit t
-                         :tag "personal")
-                  (:name "Space-related (non-moon-or-planet-related)"
-                         ;; Regexps match case-insensitively on the entire entry
-                         :and (:regexp ("space" "NASA")
-                                       ;; Boolean NOT also has implicit OR between selectors
-                                       :not (:regexp "moon" :tag "planet")))
-                  ;; Filter functions supply their own section names when none are given
-                  (:todo "WAITING")
-                  (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                         ;; Show this section at the end of the agenda. If you specified
-                         ;; this filter last, items with these todo keywords that have
-                         ;; priority A, B, or C would be displayed in those sections
-                         ;; instead, because items are filtered out in the order the
-                         ;; filters are listed.
-                         :last t)
-                  (:priority ("B" "C")))))))))
+              '(;; Each group has an implicit boolean OR operator between its selectors.
+                (:name "Today"  ; Optionally specify section name
+                       :time t  ; Items that have a time associated
+                       :todo "TODAY")  ; Items that have this TODO keyword
+                (:name "Important"
+                       ;; Single arguments given alone
+                       :tag "bills"
+                       :priority "A")
+                (:name "Shopping in town"
+                       ;; Boolean AND group matches items that match all subgroups
+                       :and (:tag "shopping" :tag "@town"))
+                (:name "Food-related"
+                       ;; Multiple args given in list with implicit OR
+                       :tag ("food" "dinner"))
+                (:name "Personal"
+                       :habit t
+                       :tag "personal")
+                (:name "Space-related (non-moon-or-planet-related)"
+                       ;; Regexps match case-insensitively on the entire entry
+                       :and (:regexp ("space" "NASA")
+                                     ;; Boolean NOT also has implicit OR between selectors
+                                     :not (:regexp "moon" :tag "planet")))
+                ;; Filter functions supply their own section names when none are given
+                (:todo "WAITING" :order 8)
+                (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                       ;; Show this section at the end of the agenda. If you specified
+                       ;; this filter last, items with these todo keywords that have
+                       ;; priority A, B, or C would be displayed in those sections
+                       ;; instead, because items are filtered out in the order the
+                       ;; filters are listed.
+                       :order 9)
+                (:priority ("B" "C")
+                           :order 1))))))))
     (org-agenda nil "u"))
 #+END_SRC
 
@@ -74,8 +75,9 @@ Each group selector takes an argument which can be a single atom or a list, e.g.
 +  =:and=: Group ITEMS that match all selectors in GROUP.
 +  =:deadline=: Group items that have deadlines.
 +  =:habit=: Group habit items. Habit items have a "STYLE: habit" Org property.
-+  =:last=: Causes group to be displayed last in the agenda.
 +  =:not=: Group ITEMS that match no selectors in GROUP.
++  =:order=: A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
++  =:order-all=: A special group that sets the order of all groups within it.
 +  =:priority=: Group items that match any of the given priorities. Argument may be a string or list of strings, which should be, e.g. "A" or ("B" "C").
 +  =:regexp=: Group items that match a regular expression. Argument may be a string or list of strings, each of which should be a regular expression. You’ll probably want to override the section name for this group.
 +  =:scheduled=: Group items that are scheduled.
