--- a/README.org
+++ b/README.org
@@ -40,20 +40,20 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
                        ;; Single arguments given alone
                        :tag "bills"
                        :priority "A")
-                (:order-all (2 (:name "Shopping in town"
-                                      ;; Boolean AND group matches items that match all subgroups
-                                      :and (:tag "shopping" :tag "@town"))
-                               (:name "Food-related"
-                                      ;; Multiple args given in list with implicit OR
-                                      :tag ("food" "dinner"))
-                               (:name "Personal"
-                                      :habit t
-                                      :tag "personal")
-                               (:name "Space-related (non-moon-or-planet-related)"
-                                      ;; Regexps match case-insensitively on the entire entry
-                                      :and (:regexp ("space" "NASA")
-                                                    ;; Boolean NOT also has implicit OR between selectors
-                                                    :not (:regexp "moon" :tag "planet")))))
+                (:order-multi (2 (:name "Shopping in town"
+                                        ;; Boolean AND group matches items that match all subgroups
+                                        :and (:tag "shopping" :tag "@town"))
+                                 (:name "Food-related"
+                                        ;; Multiple args given in list with implicit OR
+                                        :tag ("food" "dinner"))
+                                 (:name "Personal"
+                                        :habit t
+                                        :tag "personal")
+                                 (:name "Space-related (non-moon-or-planet-related)"
+                                        ;; Regexps match case-insensitively on the entire entry
+                                        :and (:regexp ("space" "NASA")
+                                                      ;; Boolean NOT also has implicit OR between selectors
+                                                      :not (:regexp "moon" :tag "planet")))))
                 ;; Filter functions supply their own section names when none are given
                 (:todo "WAITING" :order 8)
                 (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
@@ -76,7 +76,7 @@ Each group selector takes an argument which can be a single atom or a list, e.g.
 
 +  =:and=: Group ITEMS that match all selectors in GROUP.
 +  =:not=: Group ITEMS that match no selectors in GROUP.
-+  =:order-all=: Set the order of multiple groups at once, like ~(:order-all (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
++  =:order-multi=: Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
 
 *Normal selectors:*
 
