--- a/test.org
+++ b/test.org
@@ -99,20 +99,20 @@ SCHEDULED: <2017-07-17 Mon>
                        ;; Single arguments given alone
                        :tag "bills"
                        :priority "A")
-                (:order-all (2 (:name "Shopping in town"
-                                      ;; Boolean AND group matches items that match all subgroups
-                                      :and (:tag "shopping" :tag "@town"))
-                               (:name "Food-related"
-                                      ;; Multiple args given in list with implicit OR
-                                      :tag ("food" "dinner"))
-                               (:name "Personal"
-                                      :habit t
-                                      :tag "personal")
-                               (:name "Space-related (non-moon-or-planet-related)"
-                                      ;; Regexps match case-insensitively on the entire entry
-                                      :and (:regexp ("space" "NASA")
-                                                    ;; Boolean NOT also has implicit OR between selectors
-                                                    :not (:regexp "moon" :tag "planet")))))
+                (:order-multi (2 (:name "Shopping in town"
+                                        ;; Boolean AND group matches items that match all subgroups
+                                        :and (:tag "shopping" :tag "@town"))
+                                 (:name "Food-related"
+                                        ;; Multiple args given in list with implicit OR
+                                        :tag ("food" "dinner"))
+                                 (:name "Personal"
+                                        :habit t
+                                        :tag "personal")
+                                 (:name "Space-related (non-moon-or-planet-related)"
+                                        ;; Regexps match case-insensitively on the entire entry
+                                        :and (:regexp ("space" "NASA")
+                                                      ;; Boolean NOT also has implicit OR between selectors
+                                                      :not (:regexp "moon" :tag "planet")))))
                 ;; Filter functions supply their own section names when none are given
                 (:todo "WAITING" :order 8)
                 (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
