--- a/README.org
+++ b/README.org
@@ -40,6 +40,7 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
                        ;; Single arguments given alone
                        :tag "bills"
                        :priority "A")
+                ;; Set order of multiple groups at once
                 (:order-multi (2 (:name "Shopping in town"
                                         ;; Boolean AND group matches items that match all subgroups
                                         :and (:tag "shopping" :tag "@town"))
