--- a/test.org
+++ b/test.org
@@ -99,6 +99,7 @@ SCHEDULED: <2017-07-17 Mon>
                        ;; Single arguments given alone
                        :tag "bills"
                        :priority "A")
+                ;; Set order of multiple groups at once
                 (:order-multi (2 (:name "Shopping in town"
                                         ;; Boolean AND group matches items that match all subgroups
                                         :and (:tag "shopping" :tag "@town"))
