--- a/test.org
+++ b/test.org
@@ -114,16 +114,19 @@ SCHEDULED: <2017-07-17 Mon>
                                         :and (:regexp ("space" "NASA")
                                                       ;; Boolean NOT also has implicit OR between selectors
                                                       :not (:regexp "moon" :tag "planet")))))
-                ;; Filter functions supply their own section names when none are given
-                (:todo "WAITING" :order 8)
+                ;; Groups supply their own section names when none are given
+                (:todo "WAITING" :order 8)  ; Set order of this section
                 (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
-                       ;; Show this section at the end of the agenda. If you specified
-                       ;; this filter last, items with these todo keywords that have
-                       ;; priority A, B, or C would be displayed in those sections
-                       ;; instead, because items are filtered out in the order the
-                       ;; filters are listed.
+                       ;; Show this group at the end of the agenda (since it has the
+                       ;; highest number). If you specified this group last, items
+                       ;; with these todo keywords that e.g. have priority A would be
+                       ;; displayed in that group instead, because items are grouped
+                       ;; out in the order the groups are listed.
                        :order 9)
                 (:priority ("B" "C")
+                           ;; Show this section after "Today" and "Important", because
+                           ;; their order is unspecified, defaulting to 0.  Sections
+                           ;; are displayed lowest-number-first.
                            :order 1))))))))
     (org-agenda nil "u"))
 #+END_SRC
