--- a/README.org
+++ b/README.org
@@ -78,21 +78,21 @@ Each group selector takes an argument which can be a single atom or a list, e.g.
 
 *Special selectors*:
 
-+  =:and=: Group ITEMS that match all selectors in GROUP.
-+  =:not=: Group ITEMS that match no selectors in GROUP.
-+  =:order-multi=: Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
++  =:and= Group ITEMS that match all selectors in GROUP.
++  =:not= Group ITEMS that match no selectors in GROUP.
++  =:order-multi= Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
 
 *Normal selectors:*
 
-+  =:deadline=: Group items that have deadlines.
-+  =:habit=: Group habit items. Habit items have a "STYLE: habit" Org property.
-+  =:order=: A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
-+  =:priority=: Group items that match any of the given priorities. Argument may be a string or list of strings, which should be, e.g. "A" or ("B" "C").
-+  =:regexp=: Group items that match a regular expression. Argument may be a string or list of strings, each of which should be a regular expression. You’ll probably want to override the section name for this group.
-+  =:scheduled=: Group items that are scheduled.
-+  =:tag=: Group items that match any of the given tags. Argument may be a string or list of strings.
-+  =:time=: Group items that have a time associated. Items with an associated timestamp that has a time (rather than just a date) are selected.
-+  =:todo=: Group items that match any of the given TODO keywords. Argument may be a string or list of strings.
++  =:deadline= Group items that have deadlines.
++  =:habit= Group habit items. Habit items have a "STYLE: habit" Org property.
++  =:order= A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
++  =:priority= Group items that match any of the given priorities. Argument may be a string or list of strings, which should be, e.g. "A" or ("B" "C").
++  =:regexp= Group items that match a regular expression. Argument may be a string or list of strings, each of which should be a regular expression. You’ll probably want to override the section name for this group.
++  =:scheduled= Group items that are scheduled.
++  =:tag= Group items that match any of the given tags. Argument may be a string or list of strings.
++  =:time= Group items that have a time associated. Items with an associated timestamp that has a time (rather than just a date) are selected.
++  =:todo= Group items that match any of the given TODO keywords. Argument may be a string or list of strings.
 
 ** Installation
 
