Display unmatched items at customizable order position 99

--- a/README.org
+++ b/README.org
@@ -68,7 +68,10 @@ Here's the code for the example above.  The ~org-super-agenda~ command works as 
                            ;; Show this section after "Today" and "Important", because
                            ;; their order is unspecified, defaulting to 0.  Sections
                            ;; are displayed lowest-number-first.
-                           :order 1))))))))
+                           :order 1)
+                ;; After the last group, the agenda will display items that didn't
+                ;; match any of these groups, with the default order position of 99
+                )))))))
     (org-agenda nil "u"))
 #+END_SRC
 
