--- a/test.org
+++ b/test.org
@@ -127,7 +127,10 @@ SCHEDULED: <2017-07-17 Mon>
                            ;; Show this section after "Today" and "Important", because
                            ;; their order is unspecified, defaulting to 0.  Sections
                            ;; are displayed lowest-number-first.
-                           :order 1))))))))
+                           :order 1)
+                ;; After the last group, the agenda will display items that didn't
+                ;; match any of these groups, with the default order position of 99
+                )))))))
     (org-agenda nil "u"))
 #+END_SRC
 
