--- a/test.org
+++ b/test.org
@@ -135,6 +135,77 @@ SCHEDULED: <2017-07-17 Mon>
     (org-agenda nil "u"))
 
   (let ((org-agenda-files (list "~/src/org-super-agenda/test.org"))
+        (org-agenda-start-day "2017-07-28")  ; So I don't have to keep adjusting the dates forward
+        (org-agenda-span 'day)
+        (org-super-agenda-groups
+         '(;; Each group has an implicit boolean OR operator between its selectors.
+           (:name "Today"  ; Optionally specify section name
+                  :time t  ; Items that have a time associated
+                  :todo "TODAY")  ; Items that have this TODO keyword
+           (:name "Important"
+                  ;; Single arguments given alone
+                  :tag "bills"
+                  :priority "A")
+           ;; Set order of multiple groups at once
+           (:order-multi (2 (:name "Shopping in town"
+                                   ;; Boolean AND group matches items that match all subgroups
+                                   :and (:tag "shopping" :tag "@town"))
+                            (:name "Food-related"
+                                   ;; Multiple args given in list with implicit OR
+                                   :tag ("food" "dinner"))
+                            (:name "Personal"
+                                   :habit t
+                                   :tag "personal")
+                            (:name "Space-related (non-moon-or-planet-related)"
+                                   ;; Regexps match case-insensitively on the entire entry
+                                   :and (:regexp ("space" "NASA")
+                                                 ;; Boolean NOT also has implicit OR between selectors
+                                                 :not (:regexp "moon" :tag "planet")))))
+           ;; Groups supply their own section names when none are given
+           (:todo "WAITING" :order 8)  ; Set order of this section
+           (:todo ("SOMEDAY" "TO-READ" "CHECK" "TO-WATCH" "WATCHING")
+                  ;; Show this group at the end of the agenda (since it has the
+                  ;; highest number). If you specified this group last, items
+                  ;; with these todo keywords that e.g. have priority A would be
+                  ;; displayed in that group instead, because items are grouped
+                  ;; out in the order the groups are listed.
+                  :order 9)
+           (:priority ("B" "C")
+                      ;; Show this section after "Today" and "Important", because
+                      ;; their order is unspecified, defaulting to 0.  Sections
+                      ;; are displayed lowest-number-first.
+                      :order 1)
+           ;; After the last group, the agenda will display items that didn't
+           ;; match any of these groups, with the default order position of 99
+           )))
+    (org-agenda nil "a"))
+
+  (let ( (org-super-agenda-groups
+          '((:todo "WAITING"))))
+    (org-todo-list))
+
+(let ( (org-super-agenda-groups
+          '((:todo "WAITING"))))
+    (org-tags-view nil "Emacs"))
+
+(let ( (org-super-agenda-groups
+          '((:todo "WAITING"))))
+    (org-search-view nil "Emacs"))
+
+(let ( (org-super-agenda-groups
+          '((:regexp "moon")))
+(org-agenda-files (list "~/src/org-super-agenda/test.org")))
+    (org-search-view nil "space"))
+
+(let ( (org-super-agenda-groups
+          '((:todo "SOMEDAY")))
+(org-agenda-files (list "~/src/org-super-agenda/test.org")))
+    (org-agenda-list nil nil 'day))
+
+
+
+
+  (let ((org-agenda-files (list "~/src/org-super-agenda/test.org"))
         (org-agenda-custom-commands
          '(("u" "SUPER Agenda"
             org-super-agenda ""
